--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "WEB",
   "version": "1.0.0",
   "description": "",
-  "main": "29.js",
+  "main": "client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
